--- a/style_sheets/main.css
+++ b/style_sheets/main.css
@@ -22,6 +22,7 @@ body {
 
 html {
     height: 100%;
+    word-wrap: break-word;
     width: 100%;
     font-family: Optima;
     background-attachment: fixed !important;
@@ -53,6 +54,7 @@ form {
 }
 
 .face {
+    z-index: 10;
     margin: -8px;
     border-radius: 0px;
     color: rgb(6, 2, 56);
@@ -69,15 +71,18 @@ form {
 .post {
     border-radius: 40px;
     margin: 40px;
+    margin-left: 80px;
+    margin-right: 80px;
     z-index: 0;
     text-align: center;
-    background: 
-        linear-gradient(185deg, rgba(235, 128, 199, 0) 70.71%, rgba(174, 92, 221, 0.74)),
-        linear-gradient(189deg, rgba(202, 0, 135, 0) 70.71%, rgba(36, 2, 56, 0.74)) 
+    background:
+    linear-gradient(185deg, rgba(10, 4, 8, 0) 70.71%, rgb(148 170 231 / 74%)),
+    linear-gradient(-120deg, rgba(10, 4, 8, 0) 70.71%, rgb(196 207 196 / 74%)),
+    rgba(255, 1, 65, 0.103)
 }
 
 .content {
-    margin: 10px;
+    margin: 20px;
     border-radius: 20px;
     z-index: 0;
 }
@@ -86,7 +91,9 @@ form {
     display: block;
     position: relative;
     margin: 10px;
-    text-align: center;
+    font-size: 24px;
+    text-align: left;
+    /* text-indent: 30px; */
 }
 
 h1 {
@@ -177,7 +184,12 @@ h1 {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 10;
+    z-index: 11;
+}
+
+.top > * {
+    -webkit-backdrop-filter: unset;
+    backdrop-filter: unset;
 }
 
 .hat {
@@ -195,11 +207,32 @@ h1 {
     border: none;
     text-decoration: none;
     backdrop-filter: blur(50px) !important;
+    text-align: right;
+}
+
+#m-char {
+    margin-right: 1.5px;
+}
+
+.profile-menu {
+    background-color: rgba(33, 25, 66, 0.466);
+    position: fixed;
+    right: 0;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    text-decoration: none;
+    backdrop-filter: blur(50px) !important;
+    text-align: left;
+}
+
+#p-char {
+    margin-left: 1.5px;
 }
 
 #top-but {
 	position: fixed;
-	right: 45px;
+	right: 15px;
 	bottom: 45px;
     z-index: 10;
 }
@@ -213,11 +246,42 @@ h1 {
     min-height: 500px;
 }
 
+#pro-menu {
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+    text-align: right;
+    background-color: rgb(0 0 0 / 68%);
+    min-width: 400px !important;
+    min-height: 500px;
+}
+
+#quite {
+    position: fixed;
+    bottom: 0px;
+    color: red;
+}
+
 .block-animation {
     width: 50px;
-transition: width 1s cubic-bezier(0, 0, 1, 1);
+    transition: width 0.63s cubic-bezier(0, 0, 1, 1);
   }
-/*   
-  .block-animation:hover {
-    width: 400px;
-  } */
+
+.block-animation:hover {
+    width: 100px;
+    background-color: rgba(46, 40, 40, 0.507)
+  } 
+
+/* .block-animation h2 {
+    position: fixed;
+    top: 0px;
+    left: 2 px;
+    font-size: 17px;
+    word-wrap: normal;
+    color:rgba(255, 255, 255, 0);
+    transition: all 0.63s cubic-bezier(0, 0, 1, 1);
+} */
+
+.block-animation h2:hover {
+    color:rgb(255, 255, 255);
+}
